2020-09-15 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_toolbar.c: Replace call to gtk_toolbar_append_element
      with call to gtk_toolbar_insert_element in geda_toolbar_append_element.
      Revise geda_toolbar_set_orientation to set the  "orientation" property
      rather than call gtk_toolbar_set_orientation.

2020-09-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_tearoff_menu_item.c: Utilize macro:

          * geda_get_widget_parent

    * src/widgets/geda_toolbar.c: Utilize macro:

          * geda_get_widget_window

2020-08-21 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_check_menu_item.h: Redefine geda_check_menu_item_set_state
      as a function macro to add cast to GedaCheckMenuItem. Define function
      macro geda_check_menu_item_set_as_radio.

2020-08-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_handlebox.c: Revise geda_handle_box_get_toolbar to
      return type GedaToolbar instead of GtkToolbar.

    * src/widgets/geda_separator.c: Update function documentation:

          * geda_hseparator_new
          * geda_vseparator_new

    * src/widgets/geda_toolbar.c: Add functions:

          * geda_toolbar_get_orientation
          * geda_toolbar_set_orientation

2020-07-31 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_tearoff_menu_item.c: Utilize macro:

          * geda_get_widget_state

2020-07-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Revert initializing x and y values in
      geda_combo_box_list_position; c28230db5c8ca468349a10d7feaaf87862f49373.
      Appears compiler optimization results in erratic behavior.

2020-07-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_tearoff_menu_item.c: Eliminate GtkContainer in
      geda_tearoff_menu_item_paint by using utilizing macro:

          * geda_get_container_border_width

2020-07-15 Wiley E. Hill <wileyhill@gmail.com>
